<resources>
    <string name="app_name">SM1718_Grupo01_PRACTICA1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_title">Práctica 1</string>
    <string name="fragment_login_description">Servicios Móviles. Grado en Ingeniería Telemática. Curso 2017/2018.</string>
    <string name="fragment_login_user">Usuario</string>
    <string name="fragment_login_password">Contraseña</string>
    <string name="fragment_login_address">Dirección</string>
    <string name="fragment_login_port">Puerto</string>
    <string name="fragment_login_button">CONECTAR</string>
</resources>
